# xct-win8bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  launch.bat  stop.bat
.github/workflows/: release.yml
addon/: mahjong_bridge.py  xbl_bridge.py
